# LLM_ROS2_Control

./: .gitignore  .gitmodules  README.md  launch.sh  layout.drawio  llm_controller.py  llm_logic_without_ros.py  observer.py  package.xml  requirements.txt  setup.cfg  setup.py
configs/: config_alice.yaml  config_bob.yaml
llm_ros_controller_ws/src/llm_controller/: package.xml  setup.cfg  setup.py
llm_ros_controller_ws/src/llm_controller/config/: alice_params.yaml  bob_params.yaml
llm_ros_controller_ws/src/llm_controller/launch/: apriltag_detection_launch.yaml  apriltag_detection_params.yaml  cv_launch.yaml  llm_control_alice_launch.py  llm_control_alice_launch.yaml  llm_control_bob.py  llm_control_bob.yaml  llm_control_bob_launch.yaml  llm_control_launch.yaml  llm_control_namespace_launch.yaml  llm_control_param_launch.py
llm_ros_controller_ws/src/llm_controller/llm_controller/: camera_info_publisher.py  config.yaml  grid.py  hardware_protection.py  image_publisher_node.py  llm_node.py
logs/: Alice_negotiation_log.csv  Bob_negotiation_log.csv
logs/observer/: 2024-01-31_23-09-04.txt  2024-01-31_23-09-47.txt  2024-02-01_10-27-11.txt  2024-02-01_10-31-12.txt  2024-02-01_11-08-49.txt  2024-02-01_11-48-10.txt  2024-02-01_11-50-54.txt  2024-02-01_12-09-12.txt  2024-02-01_12-17-33.txt  2024-02-02_20-56-45.txt  2024-02-02_21-00-59.txt  2024-02-02_21-02-46.txt  2024-02-02_21-17-03.txt  2024-02-02_21-26-33.txt  2024-02-03_18-22-10.txt  2024-02-03_18-29-27.txt  2024-02-03_18-31-43.txt  2024-02-03_18-36-12.txt  2024-02-03_19-03-31.txt  2024-02-03_19-09-15.txt  (+58 more)
