<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_controller</name>
  <version>0.0.1</version>
  <description>Interacts with an LLM and parse the response into topic messages.</description>
  <maintainer email="toby.godfrey2003@gmail.com">Toby Godfrey</maintainer>
  <license>GPT-3.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>apriltag_ros</depend> -->
  <!-- <depend>opencv2</depend> -->

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
